--- a/apps/dmJobModule/templates/job_list.html
+++ b/apps/dmJobModule/templates/job_list.html
@@ -22,12 +22,12 @@
             <div class="row">
                 <div class="col col-1"></div>
                 <div class="col col-10">
-                    <div class="gaadiex-list">
+                    <div>
                         {% for job in data %}
                             {% if not forloop.first %}
                                 <hr />
                             {% endif %}
-                            <div class="gaadiex-list-item">
+                            <div class="pt-2">
                                 <h3><a href="/job/{{ job.slug }}">{{ job.title }}</a></h3>
                                 <h4>{{ job.location }}</h4>
                                 <p>{{ job.description }}</p>
