--- a/dshop/templates/theme/default/plugins/team-child.html
+++ b/dshop/templates/theme/default/plugins/team-child.html
@@ -11,7 +11,7 @@
       {% endif %}
       <ul class="social_icons social_style1">
         {% if instance.email %}<li><a href="mailto:{{instance.email}}"><i class="ion-email"></i></a></li>{% endif %}
-        {% if instance.facebook %}<li><a href="{{instance.facebook}}" target="_blank"><i class="ion-social-facebook"></i></a></li>{% endif %}
+        {% if instance.facebook %}<li><a href="{{instance.facebook}}" target="_blank"><i class="fab fa-facebook-square"></i></a></li>{% endif %}
         {% if instance.twitter %}<li><a href="{{instance.twitter}}" target="_blank"><i class="ion-social-twitter"></i></a></li>{% endif %}
         {% if instance.instagram %}<li><a href="{{instance.instagram}}" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>{% endif %}
       </ul>
