--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -1142,7 +1142,7 @@ main > .container > .row {
     font-size: 66px;
     line-height: 100%;
 }
-
+/* ===--- Module Job ---=== */
 .dmjob-applyform {
     background-color: #fff;
     border-radius: 10px;
@@ -1174,4 +1174,31 @@ main > .container > .row {
 }
 .dmjob-plugin-box:hover {
     overflow-y: auto;
+}
+/* ===--- Module Portfolio ---=== */
+.section-portfolio .portfolio_item {
+    background-color: #fff;
+    position: relative;
+    margin-bottom: 30px;
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0 0 7px rgb(0 0 0 / 10%);
+}
+.section-portfolio .portfolio_img {
+    font-size: 0;
+    line-height: 0;
+}
+.section-portfolio .portfolio_img a {
+    overflow: hidden;
+    display: inline-block;
+}
+.section-portfolio .portfolio_img a img {
+    transform: scale(1);
+    transition: transform 0.4s;
+}
+.section-portfolio .portfolio_img a:hover img {
+    transform: scale(1.1);
+}
+.section-portfolio .portfolio_title a {
+    display: block;
+    padding: 1rem;
 }
