--- a/dshop/templates/theme/default/plugins/bloc-textcarrousel-child.html
+++ b/dshop/templates/theme/default/plugins/bloc-textcarrousel-child.html
@@ -1,8 +1,8 @@
 {% load thumbnail cms_tags %}
 
-<div class="item" id="image{{instance.pk}}no{{forloop.counter}}">
+<div class="item" id="image-{{instance.parent.pk}}-{{instance.pk}}no{{forloop.counter}}">
     <div class="dmplugin-textcarrousel-item">
-        <a href="#">
+        <a href="{{ instance.image.url }}" data-title=" " data-description=" " data-lightbox="gallery-dmplugin-textcarrousel-{{instance.parent.pk}}">
             {% if crop_image %}
                 {% thumbnail instance.image "600x400" crop upscale as thumb %}
             {% else %}
