fix mobile col portfolio

--- a/apps/dmPortfolio/templates/portfolio_list.html
+++ b/apps/dmPortfolio/templates/portfolio_list.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 {% for item in data %}
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4">
                         <div class="portfolio_item">
                             <div class="portfolio_img">
                                 <a href="{{ item.image }}" data-title="{{ item.title }}" data-description="{{ item.description }}" data-lightbox="gallery-portfolio" class="item-img">
