--- a/dshop/templates/theme/default/plugins/team-child.html
+++ b/dshop/templates/theme/default/plugins/team-child.html
@@ -13,7 +13,7 @@
         {% if instance.email %}<li><a href="mailto:{{instance.email}}"><i class="ion-email"></i></a></li>{% endif %}
         {% if instance.facebook %}<li><a href="{{instance.facebook}}" target="_blank"><i class="fab fa-facebook-square"></i></a></li>{% endif %}
         {% if instance.twitter %}<li><a href="{{instance.twitter}}" target="_blank"><i class="ion-social-twitter"></i></a></li>{% endif %}
-        {% if instance.instagram %}<li><a href="{{instance.instagram}}" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>{% endif %}
+        {% if instance.instagram %}<li><a href="{{instance.instagram}}" target="_blank"><i class="fab fa-instagram"></i></a></li>{% endif %}
       </ul>
     </div>
     <div class="team_content">
