--- a/dshop/templates/theme/default/pages/payment_error.html
+++ b/dshop/templates/theme/default/pages/payment_error.html
@@ -17,7 +17,7 @@
                     </tr>
                     <tr>
                         <td>{% trans 'Message' %}</td>
-                        <td>{{ error_message</td>
+                        <td>{{ error_message }}</td>
                     </tr>
                 </tbody>
             </table>
