--- a/dshop/templates/theme/default/email/order-detail.html
+++ b/dshop/templates/theme/default/email/order-detail.html
@@ -1,5 +1,5 @@
 {# include this template to list all items of the given order #}
-{% load i18n post_office %}{% spaceless %}
+{% load i18n post_office dshop_tags %}{% spaceless %}
 
 {% if latest_delivery and latest_delivery.shipping_method and latest_delivery.shipping_id %}
     <table style="width: 100%; background-color: #fff; border-collapse: collapse; margin-bottom: 20px;">
@@ -76,15 +76,38 @@
 			<td style="font-size: 120%; text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{% trans "Subtotal" %}:</td>
 			<td style="font-size: 120%; text-align: right; padding: 10px 15px; white-space: nowrap; border-bottom: 2px solid #eee;">{{ order.subtotal }}</td>
 		</tr>
+        {% dm_check_shipping_taxed order.extra.rows as shippingistaxed %}
+        {% if shippingistaxed %}
+            {% for key, extra_row in order.extra.rows %}
+                {% if key == "pickup-in-store" or key == "free-shipping" or key == "standard-shipping" or key == "express-shipping" or key == "standard-separator-shipping" or key == "express-separator-shipping" %}
+                    <tr>
+                        <td colspan="2"></td>
+                        <td style="font-size: 120%; text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{{ extra_row.label }}:</td>
+                        <td style="font-size: 120%; text-align: right; padding: 10px 15px; white-space: nowrap; border-bottom: 2px solid #eee;">{{ extra_row.amount }}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
         {% for key, extra_row in order.extra.rows %}
-          {% if key != "subtotal-before-discounts" and key != "discounts" and key != "applied-promocodes" and key != "canadiantaxes" %}
-            <tr>
-                <td colspan="2"></td>
-                <td style="font-size: 120%; text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{{ extra_row.label }}:</td>
-                <td style="font-size: 120%; text-align: right; padding: 10px 15px; white-space: nowrap; border-bottom: 2px solid #eee;">{{ extra_row.amount }}</td>
-            </tr>
-          {% endif %}
-		{% endfor %}
+            {% if key != "subtotal-before-discounts" and key != "discounts" and key != "applied-promocodes" and key != "canadiantaxes" and key != "cart-discounts" and key != "shipping-is-taxed" and key != "pickup-in-store" and key != "free-shipping" and key != "standard-shipping" and key != "express-shipping" and key != "standard-separator-shipping" and key != "express-separator-shipping" %}
+                <tr>
+                    <td colspan="2"></td>
+                    <td style="font-size: 120%; text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{{ extra_row.label }}:</td>
+                    <td style="font-size: 120%; text-align: right; padding: 10px 15px; white-space: nowrap; border-bottom: 2px solid #eee;">{{ extra_row.amount }}</td>
+                </tr>
+            {% endif %}
+        {% endfor %}
+        {% if not shippingistaxed %}
+            {% for key, extra_row in order.extra.rows %}
+                {% if key == "pickup-in-store" or key == "free-shipping" or key == "standard-shipping" or key == "express-shipping" or key == "standard-separator-shipping" or key == "express-separator-shipping" %}
+                <tr>
+                    <td colspan="2"></td>
+                    <td style="font-size: 120%; text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{{ extra_row.label }}:</td>
+                    <td style="font-size: 120%; text-align: right; padding: 10px 15px; white-space: nowrap; border-bottom: 2px solid #eee;">{{ extra_row.amount }}</td>
+                </tr>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
 		<tr>
 			<td colspan="2"></td>
 			<td style="font-size: 120%; text-align: right; padding: 10px 15px; font-weight: bold">{% trans "Total" %}:</td>
