--- a/dshop/static/theme/default/css/style.css
+++ b/dshop/static/theme/default/css/style.css
@@ -1,25 +1,6 @@
-
-body{
-  color:#202325;
-}
-
-a{
-  color:#458d91;
-  text-decoration:none;
-  transition:color 0.3s;
-}
-a:hover{
-  color:#000;
-  text-decoration:none;
-}
-
 .section-textmedia ul,
 .container > .row > .col ul:not([class]) {
     margin: 0.5rem 2rem 25px;
-}
-
-.bg_default{
-  background-color:#458d91!important;
 }
 
 .widget_links li a:hover,
@@ -27,50 +8,44 @@ a:hover{
 .footer_link li a:hover,
 .social_icons li a:hover,
 .footer-copyright a:hover{
-	color: #458d91;
+	color: #41b6e6;
 }
 
 .topnav a:hover,
 .topnav .drawer-toggle:hover{
-  color:#458d91;
+  color:#41b6e6;
 }
 
 .navbar .navbar-nav > li:hover > a:not(.dm-menu-split),
 .light_skin.transparent_header.nav-fixed .navbar .navbar-nav > li:hover > a:not(.dm-menu-split),
 .transparent_header.nav-fixed .light_skin .navbar .navbar-nav > li:hover > a:not(.dm-menu-split) {
-	color: #458d91;
+	color: #41b6e6;
 }
 
 .navbar .navbar-nav > li > a.dm-menu-split:hover,
 .light_skin.transparent_header.nav-fixed .navbar .navbar-nav > li > a.dm-menu-split:hover,
 .transparent_header.nav-fixed .light_skin .navbar .navbar-nav > li > a.dm-menu-split:hover {
-	color: #458d91;
+	color: #41b6e6;
 }
 
 /* ===--- Drawer ---=== */
 .drawer-toggle #dm-cart-items{
-  background-color:#458d91;
+  background-color:#41b6e6;
 }
 .dm-drawer-user-tabs .btn{
   background-color:#fff;
   border:1px solid #CED4DA;
-  color:#458d91;
+  color:#41b6e6;
 }
 .dm-drawer-user-tabs .btn.disabled{
-  background-color:#458d91;
+  background-color:#41b6e6;
   color:#fff;
   opacity:1;
-}
-.dm-drawer-inner #drawer-items-list .col-8 a{
-  color:#458d91;
-}
-.dm-drawer-inner #drawer-items-list .col-8 a:hover{
-  color:#202325;
 }
 .dm-drawer-total{
   background-color:#fff;
   border:1px solid #CED4DA;
-  color:#458d91;
+  color:#41b6e6;
 }
 @media (max-width: 967px) {
     .dm-drawer-inner #drawer-items-list .col-3,
@@ -96,35 +71,8 @@ a:hover{
         width: 80%;
     }
 }
-.dm-drawer .cart-change-quantity span {
-    background-color: #bcd5d8;
-}
-.dm-drawer .cart-change-quantity span:not(.disabled):hover {
-    background-color: #458d91;
-}
 
 /* ===--- Main Menu ---=== */
-#topbar a:hover {
-    color: #458d91;
-}
-#tophead .tophead-topnav .tophead-icon:hover {
-    color: #458d91;
-}
-.dm-main-menu > ul > li > a.selected,
-.dm-main-menu > ul > li > a:hover {
-    color: #458d91;
-}
-.dm-main-submenu a:hover {
-    color: #141617;
-}
-.dm-main-submenu a::after {
-    border-top-color: #458d91;
-}
-@media (max-width: 767px) {
-    .dm-main-submenu a:hover {
-        color: #458d91;
-    }
-}
 
 /* ===--- Produits ---=== */
 .dm-variants-select{
@@ -158,7 +106,7 @@ a:hover{
 }
 .section-testimonials .testionial-text::before {
     content: "\201C";
-    color: #458d91;
+    color: #41b6e6;
     font-size: 3rem;
     line-height: 100%;
     opacity: 0.5;
@@ -199,18 +147,18 @@ a:hover{
 
 .product-card .name a:hover,
 .product-card .price{
-  color:#458d91;
+  color:#41b6e6;
 }
 .product .product_title a {
 	color:#202325;
 }
 .product .product_title a:hover {
-	color:#458d91;
+	color:#41b6e6;
 }
 
 .widget_categories li a:hover,
 .widget_archive li a:hover{
-  color:#458d91;
+  color:#41b6e6;
 }
 
 .tab-style1 .nav-tabs li.nav-item a.active, .tab-style1 .nav-tabs li.nav-item a.active:hover,
@@ -221,15 +169,15 @@ a:hover{
 
 /* ===--- Filtres ---=== */
 .products-filters .filters-boxes .filters-box.checked .filters-text {
-  background-color: #458d91;
+  background-color: #41b6e6;
   color: #fff;
 }
 .products-filters .filters-boxes .filters-box:hover .filters-text {
-  background-color: #458d91;
+  background-color: #41b6e6;
   color: #fff;
 }
 .products-filters .filters-boxes .filters-box.checked:hover  .filters-text {
-  background-color: #458d91;
+  background-color: #41b6e6;
   color: #000;
 }
 .products-filters .filters-boxes .filters-box .filters-text {
@@ -238,10 +186,10 @@ a:hover{
 
 /* ===--- Vos commandes ---=== */
 .text-primary{
-  color:#458d91!important;
+  color:#41b6e6!important;
 }
 .badge-primary {
-  background-color: #458d91;
+  background-color: #41b6e6;
   color: #fff;
   font-size:0.9rem;
   font-weight:500;
@@ -259,17 +207,17 @@ a:hover{
   padding:0.5rem;
 }
 .service-content-box pre{
-  border-left:2px solid #458d91;
+  border-left:2px solid #41b6e6;
   padding-left:1rem;
 }
 
 /**/
 .pagination .page-item a {
-    color:#458d91;
+    color:#41b6e6;
 }
 .page-item.active .page-link{
-    background-color:#458d91;
-    border-color:#458d91;
+    background-color:#41b6e6;
+    border-color:#41b6e6;
 }
 
 /**/
@@ -278,18 +226,18 @@ a:hover{
   min-height: 50vh;
 }
 #app.v-application .primary{
-  background-color:#458d91!important;
-  border-color:#458d91!important;
+  background-color:#41b6e6!important;
+  border-color:#41b6e6!important;
 }
 #app.v-application a.v-btn.primary{
   color:#fff!important;
 }
 #app.v-application .primary--text{
-  color:#458d91!important;
-  caret-color:#458d91!important;
+  color:#41b6e6!important;
+  caret-color:#41b6e6!important;
 }
 #app.v-application a{
-  color:#458d91!important;
+  color:#41b6e6!important;
 }
 #app.v-application a:hover{
   color:#495057;
@@ -297,7 +245,7 @@ a:hover{
 #app.theme--light.v-application,
 #app.theme--light .v-list{
   background:transparent;
-  color:#458d91;
+  color:#41b6e6;
 }
 #app.theme--light .v-card,
 #app.theme--light .v-stepper,
@@ -317,7 +265,7 @@ a:hover{
 #app .v-card__text,
 #app.theme--light.v-card > .v-card__text,
 #app.theme--light.v-card .v-card__subtitle{
-  color:#458d91!important;
+  color:#41b6e6!important;
 }
 #app .v-btn__content{
   font-weight:500;
